# pandas_exercises

./: .gitmodules  log.csv  objetivos_en_clase.xlsx  pyproject.toml  requirements.txt
01_Getting_&_Knowing_Your_Data/Chipotle/: Exercise_with_Solutions.ipynb
format_clean_dataframe/src/exercises/: __init__.py
format_clean_dataframe/src/exercises/acometidas/: columns.py  data.csv  dataframe.py  enunciado.md
format_clean_dataframe/src/exercises/acometidas/jc/: dataframe_solucion.py  logger_decorator.py
format_clean_dataframe/src/exercises/acometidas/jc/acometida/: main.py
format_clean_dataframe/src/exercises/acometidas/jc/acometida/code/: Validar_DataFrame.py  __init__.py  enum_cols.py  tasks.py
format_clean_dataframe/src/exercises/acometidas/jc/acometida/code_interfaces/: clean_data.py
format_clean_dataframe/src/exercises/evolucion_obras/: col_planificacion.py  datos_planificacion.csv  enunciado.md  style.py
format_clean_dataframe/src/utils/: get_df.py  numbers_custom.py
format_clean_dataframe/src/utils/data_parser/: __init__.py
format_clean_dataframe/src/utils/data_parser/src/: data_parser.py
format_clean_dataframe/test/: data_acometida.csv  test_avance.obra.py  test_eg_acometidas.py  test_eg_evolucion_obras.py
validation/format_clean_dataframe/src/exercises/acometidas/jc/acometida/code/: Importar_csv_optimo.py  (+1 more)
validation/format_clean_dataframe/src/exercises/evolucion_obras/: dataframe.py
validation/format_clean_dataframe/src/utils/data_parser/src/: clean_data.py  spanish_month.py
validation/format_clean_dataframe/test/: test_eg_acometidas.py
(+1 files in other folders)
