[tool.poetry]
name = "pandas-exercises"
version = "0.1.0"
description = ""
authors = ["p-hzamora <p.hzamora@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
numpy = "^1.26.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
